image glow effect

--- a/front/src/styles/Footer.css
+++ b/front/src/styles/Footer.css
@@ -10,24 +10,30 @@
 }
 
 .social-icons {
-  margin-bottom: 10px;
+  margin: 10px;
 }
 
-.social-icons a {
+.social-icon a {
   color: #8e44ad;
-  margin: 0 10px;
+  margin: 10px;
   font-size: 1.6rem;
-  transition: transform 0.3s ease, color 0.3s ease;
 }
 
-.social-icons a:hover {
-  color: #6a1b9a;
-  transform: translateY(-5px) scale(1.15);
+.social-icon a:hover {
+  color: #fff;
+  padding: 8px;
+  margin: 15px;
+  border-radius: 50px;
+  background-color: blue;
+  transform: translateY(-8px) scale(1.15);
+  transition: transform 5s ease, color 0.3s ease;
 }
 
 .footer p {
-  color: #5a189a;
+  color: #000;
   font-size: 1rem;
+  padding: 5px;
+  margin: 10px;
   letter-spacing: 0.5px;
   font-family: "Shadows Into Light", cursive;
 }
