--- a/front/src/styles/Home.css
+++ b/front/src/styles/Home.css
@@ -1,10 +1,9 @@
-
 #nodes {
   margin: 0 !important;
   padding: 0 !important;
 }
 
-.section-container{
+.section-container {
   margin-top: 5px;
   padding-top: 5px;
 }
@@ -40,7 +39,7 @@
 .hero-tagline {
   font-size: 1.2rem;
   color: #333;
-  font-family: sans-serif Inter ;
+  font-family: sans-serif Inter;
   font-weight: bold;
   margin-bottom: 10px;
 }
@@ -58,23 +57,61 @@
 
 .hero-image-container {
   position: relative;
-  display: inline-block;
+  display: flex;
   z-index: 2;
   width: 100%;
   max-width: 280px;
   margin: 0 auto;
+  justify-content: center;
+  align-items: center;
 }
 
 .hero-image {
   width: 280px;
   height: 280px;
+  z-index: 2;
   object-fit: cover;
   border-radius: 50%;
   box-shadow: 0 0 50px rgba(155, 89, 182, 0.3);
-  animation: float 3s ease-in-out infinite,
-    glow 2s ease-in-out infinite alternate;
+  position: relative;
+  box-shadow: 0 0 25px rgba(171, 71, 188, 0.7);
+  animation: pulse-glow 3s infinite alternate;
 }
 
+/* Glowing aura behind image */
+.hero-image::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background: radial-gradient(
+    circle,
+    rgba(171, 71, 188, 0.6) 0%,
+    rgba(126, 87, 194, 0.2) 70%,
+    transparent 100%
+  );
+  z-index: 1;
+  animation: aura-spin 10s linear infinite;
+}
+
+@keyframes pulse-glow {
+  0% {
+    box-shadow: 0 0 20px rgba(171, 71, 188, 0.4);
+  }
+  100% {
+    box-shadow: 0 0 40px rgba(171, 71, 188, 0.9);
+  }
+}
+
+@keyframes aura-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
 @keyframes float {
   0%,
   100% {
@@ -145,8 +182,24 @@
 }
 
 /* Buttons */
-.hero-btn {
-  margin-top: 10px;
+
+.btn {
+  background-color: #7f089a;
+  color: #fff;
+  padding: 10px;
+  margin: 15px 5px;
+}
+
+.btn2 {
+  background-color: hwb(0 85% 13%);
+  color: #000;
+}
+.btn1:hover,
+.btn2:hover {
+  font-variant: small-caps;
+  background-color: whitesmoke;
+  color: #000;
+  padding: 5px;
 }
 
 /* Responsive */
