--- a/front/src/styles/Contact.css
+++ b/front/src/styles/Contact.css
@@ -35,7 +35,7 @@
   font-family: sans-serif;
   color: rgb(32, 8, 102);
   font-size: medium;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Shadows Into Light";
 }
 
 .tnx {
