--- a/front/src/styles/Projects.css
+++ b/front/src/styles/Projects.css
@@ -1,13 +1,13 @@
 .section-container {
-  padding-top:  40px;
-  margin-top: 10px;
+  padding-top: 40px;
+  margin-top: 30px;
 }
 
 .projects-section {
   max-width: 900px;
   margin: 0 auto;
   text-align: center;
-  padding: 35px;
+  padding: 5px;
   position: relative;
 }
 
@@ -16,6 +16,7 @@
   font-size: 2rem;
   color: #6a1b9a;
   margin-bottom: 15px;
+  margin-top: 5px;
 }
 
 .projects-intro {
@@ -70,7 +71,7 @@
   transform: scale(1.3);
 }
 
-.pointerD{
+.pointerD {
   cursor: pointer;
 }
 .project-details {
@@ -119,4 +120,24 @@
   50% {
     transform: translateY(-8px);
   }
+}
+
+.c-btn {
+  border-radius: 30px;
+  padding: 13px;
+  background-color: #ec07c6;
+  height: max-content;
+  width: max-content;
+  margin-top: 50px;
+}
+
+.c-btn:hover {
+  animation: glowPulse 1.2s infinite alternate;
+  background: linear-gradient(90deg, #256303, #11e5e5);
+  color: #fff;
+  font-variant: small-caps;
+  padding-inline: 20px;
+  transform: translateY(-3px) scale(1.05);
+  cursor: pointer;
+  border: 1px solid rgb(232, 200, 200);
 }
