--- a/front/src/styles/About.css
+++ b/front/src/styles/About.css
@@ -15,7 +15,6 @@
   max-width: 1100px;
   margin: 0 auto;
   box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
-  font-family: "Poppins", sans-serif;
   color: #333;
   transform: translateY(30px);
   opacity: 0;
@@ -133,8 +132,8 @@
 
 .about-text p {
   font-style: oblique;
+  font-family: "Open sans";
   font-size: large;
-  font-family: "Shadows Into Light";
   text-align: justify;
   text-shadow: 10px 15px 10px rgba(200, 39, 236, 0.5);
 }
@@ -273,7 +272,7 @@
 }
 
 .more-text p {
-  font-family: "Shadows Into Light";
+  font-family: "Open sans";
   font-size: 1rem;
   line-height: 1.5;
   color: #333;
